k8s/user-service/user-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
    spec:
      containers:
      - name: user-service
        image: europe-west3-docker.pkg.dev/msoa-projekt/orarend-repo/user-service:latest
        imagePullPolicy: Always 
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: user-app-service 
spec:
  type: ClusterIP 
  ports:
  - port: 5001
    targetPort: 5001
  selector:
    app: user-app
