k8s/user-service/user-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: user-db-service
spec:
  ports:
  - port: 3306
  selector:
    app: user-db
